# std-nb

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  README.md  TODO
cmake/: CheckCXX11Features.cmake  CheckGCCVersion.cmake  FindLBFGS.cmake  FindLibGooglePerfTools.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
scripts/: analyze.r  collect_normalized_theta-new.r  collect_normalized_theta.r  perform_default_analysis.r  perform_default_analysis_single.r  perform_thetas_analysis.r  perform_thetas_analysis_single.r  sample_nb.r  stmakearchive
src/: CMakeLists.txt  Experiment.cpp  Experiment.hpp  ExperimentDGE.hpp  FactorAnalysis.cpp  FactorAnalysis.hpp  KaleidoscopeJIT.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelType.hpp  PartialModel.cpp  PartialModel.hpp  Paths.cpp  Paths.hpp  PoissonFactorAnalysis.cpp  PoissonFactorAnalysis.hpp  PoissonModel.cpp  PoissonModel.hpp  Theta.cpp  Theta.hpp  VariantModel.cpp  VariantModel.hpp  adagrad.hpp  adam.hpp  aux.cpp  aux.hpp  cli.cpp  cli.hpp  coefficient.cpp  coefficient.hpp  compression.hpp  compression_mode.cpp  compression_mode.hpp  counts.cpp  counts.hpp  covariate.cpp  covariate.hpp  design.cpp  (+79 more)
src/spec_generator/: CMakeLists.txt
src/spec_generator/src/: spec_generator.cpp
src/spec_parser/: CMakeLists.txt  Distribution.cpp  Distribution.hpp  Driver.cpp  Driver.hpp  Formula.cpp  Formula.hpp  RandomVariable.cpp  RandomVariable.hpp  RegressionEquation.cpp  RegressionEquation.hpp  driver.cpp  driver.hpp  parser.yy  scanner.ll
src/spec_parser/include/spec_parser/: Distribution.hpp  Driver.hpp  Expression.hpp  Formula.hpp  RandomVariable.hpp
src/spec_parser/include/spec_parser/expression/: balance.hpp  clone.hpp  codegen.hpp  collect.hpp  deriv.hpp  eval.hpp  exp.hpp  generate.hpp  precedence.hpp  show.hpp  simplify.hpp  transform.hpp  visitor.hpp
src/spec_parser/src/: Distribution.cpp  Driver.cpp  Expression.cpp  Formula.cpp  RandomVariable.cpp  RegressionEquation.cpp  parser.yy  scanner.ll
